# compare-tickets

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
tests/fixtures/: RS_Via-3.json  RS_ViaOW.json  Unconfirmed 273576.crdownload  Unconfirmed 330951.crdownload
