[tool.poetry]
name = "compare-tickets"
version = "0.1.0"
description = ""
repository = "https://github.com/kaziamov/compare-tickets"
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "compare_tickets"}]


[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compare_tickets = "compare_tickets/scripts/compare.py:compare"
